# fn-ffi

./: Cargo.toml  README.md
src/: lib.rs  rfn.rs  rfnmut.rs  rfnonce.rs
